--- a/code-ide/src/components/CharacterGuide.module.css
+++ b/code-ide/src/components/CharacterGuide.module.css
@@ -57,7 +57,7 @@
   display: flex;
   align-items: flex-end;
   gap: 14px;
-  z-index: 1000;
+  z-index: 100;  /* Reduced from 1000 to be below modal */
 }
 
 .robotImage {
